Changed font weight

--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -1081,6 +1081,10 @@
                                 line-height: 100%;
                             }
 
+                            h5{
+                                font-weight: 300;
+                            }
+
                             h3{
                                 margin-bottom: 0;
 
