--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -6050,6 +6050,9 @@ footer .footer-main .footer-links__2 .links {
   font-weight: 400;
   line-height: 100%;
 }
+.services-content-wrapper .about-content .d-flex .services-content-wrapper-boxes .item .box h5 {
+  font-weight: 300;
+}
 .services-content-wrapper .about-content .d-flex .services-content-wrapper-boxes .item .box h3 {
   margin-bottom: 0;
 }
