Added thank you page and add Author detail in Blog detail page

--- a/src/scss/components/_blog-category-wrappper.scss
+++ b/src/scss/components/_blog-category-wrappper.scss
@@ -92,7 +92,10 @@
                 font-family: $font;
                 letter-spacing: 0.03em;
                 align-items: center;
+
+                div{
                 opacity: 0.6;
+                }
     
                 .tag{
                     background-color: $blue;
@@ -102,6 +105,7 @@
                     font-family: $font;
                     text-transform: uppercase;
                     letter-spacing: 0.03em;
+                    opacity: 1;
                 }
     
                 span:first-child{
