--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@
 @import "components/service-detail-wrapper";
 @import "components/page-not-found";
 @import "components/thank-you";
+@import "components/sitemap";
 
 
 
