--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -292,8 +292,9 @@ footer{
                 }
 
                 input[type="file"] {
-                    display: none;
-                  }
+                    cursor: pointer;
+                    padding: 16px 20px;
+                }
               
                   #file-name {
                     color: $white;
