--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -1418,11 +1418,12 @@
             width: fit-content;
 
             @media (max-width: 991px) {
-                margin-left: 150px;
+                margin-left: 0;
+                width: 100%;
             }
 
             @media (max-width: 767px) {
-                width: fit-content;
+                width: 100%;
                 margin: 50px auto 0;
             }
 
@@ -1431,7 +1432,7 @@
                 color: $white;
                 font-family: $font;
                 font-weight: 300;
-                line-height: 32px;
+                line-height: 25px;
                 padding: 5px;
                 height: 68px;
                 width: 300px;
@@ -1441,9 +1442,9 @@
                 align-items: center;
                 justify-content: center;
                 overflow: hidden;
-                white-space: nowrap;
                 border: 1px solid $blue;
                 cursor: pointer;
+                text-align: center;
 
                 @media (max-width:1300px) {
                     width: 240px;
@@ -1451,13 +1452,16 @@
                 }
 
                 @media (max-width:1200px) {
-                    font-size: 17px;
+                    font-size: 16px;
                     width: 201px;
+                }
+
+                @media (max-width:991px) {
+                    width: 100%;
                 }
 
                 @media (max-width:767px) {
                     font-size: 18px;
-                    width: 236px;
                     height: 53px;
                 }
 
@@ -1472,6 +1476,22 @@
 
                 &:hover{
                     background-color: $blue;
+                }
+
+                &:nth-child(2){
+                    @media (max-width:991px) {
+                        &:before{
+                            left: 50% !important;
+                        }
+                    }
+                }
+
+                &:nth-child(3){
+                    @media (max-width:991px) {
+                        &:before{
+                            left: calc(100% - 1px) !important;
+                        }
+                    }
                 }
 
                 &:nth-last-child(2){
@@ -2116,6 +2136,10 @@
                 margin: 100px auto 50px;
         }
 
+        @media (max-width:767px) {
+                margin: 50px auto;
+        }
+
         h3{
             margin-bottom: 30px;
         }
@@ -2176,6 +2200,7 @@
 
                 @media (max-width:767px) {
                     padding: 0 0 40px 0;
+                    margin-top: 50px;
                 }
             }
 
