--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -732,7 +732,8 @@ footer .footer-contact__form .choose-btn:hover {
   background-color: #0033FF;
 }
 footer .footer-contact__form input[type=file] {
-  display: none;
+  cursor: pointer;
+  padding: 16px 20px;
 }
 footer .footer-contact__form #file-name {
   color: #ffffff;
@@ -1976,7 +1977,7 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 767px) {
   .hero-wrapper.version-1 .hero-wrapper__content.content-width, .hero-wrapper.version-2 .hero-wrapper__content.content-width, .hero-wrapper.version-3 .hero-wrapper__content.content-width, .hero-wrapper.version-4 .hero-wrapper__content.content-width {
-    min-height: 595px;
+    min-height: 650px;
     padding: 25px 20px;
   }
 }
@@ -3010,6 +3011,11 @@ footer .footer-main .footer-links__2 .links {
   .why-choose-us-wrapper .step-2, .why-choose-us-wrapper .step-3 {
     position: relative;
     height: auto;
+  }
+}
+@media (max-width: 767px) {
+  .why-choose-us-wrapper .step-2, .why-choose-us-wrapper .step-3 {
+    padding: 0;
   }
 }
 @media (max-width: 1210px) {
@@ -4573,7 +4579,7 @@ footer .footer-main .footer-links__2 .links {
   margin: 0 auto;
 }
 .career-wrapper.top-gap {
-  margin-top: -170px;
+  margin-top: -150px;
 }
 @media (max-width: 991px) {
   .career-wrapper.top-gap {
@@ -4720,7 +4726,14 @@ footer .footer-main .footer-links__2 .links {
     width: 170px;
   }
   .career-wrapper .career-process .d-grid .step.step-2 .animated-arrow {
-    transform: rotate(150deg) translateX(600%);
+    transform: rotate(149deg) translateX(635%);
+    transition: all 2s;
+    width: 170px;
+  }
+}
+@media (max-width: 1300px) {
+  .career-wrapper .career-process .d-grid .step.step-2 .animated-arrow {
+    transform: rotate(152deg) translateX(635%);
     transition: all 2s;
     width: 170px;
   }
@@ -6429,13 +6442,13 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 991px) {
   .services-content-wrapper .development-process-wrapper__steps {
-    margin-left: 150px;
+    margin-left: 0;
+    width: 100%;
   }
 }
 @media (max-width: 767px) {
   .services-content-wrapper .development-process-wrapper__steps {
-    width: -moz-fit-content;
-    width: fit-content;
+    width: 100%;
     margin: 50px auto 0;
   }
 }
@@ -6444,7 +6457,7 @@ footer .footer-main .footer-links__2 .links {
   color: #ffffff;
   font-family: "Nohemi";
   font-weight: 300;
-  line-height: 32px;
+  line-height: 25px;
   padding: 5px;
   height: 68px;
   width: 300px;
@@ -6454,9 +6467,9 @@ footer .footer-main .footer-links__2 .links {
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  white-space: nowrap;
   border: 1px solid #0033FF;
   cursor: pointer;
+  text-align: center;
 }
 @media (max-width: 1300px) {
   .services-content-wrapper .development-process-wrapper__steps .step {
@@ -6466,14 +6479,18 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 1200px) {
   .services-content-wrapper .development-process-wrapper__steps .step {
-    font-size: 17px;
+    font-size: 16px;
     width: 201px;
+  }
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .development-process-wrapper__steps .step {
+    width: 100%;
   }
 }
 @media (max-width: 767px) {
   .services-content-wrapper .development-process-wrapper__steps .step {
     font-size: 18px;
-    width: 236px;
     height: 53px;
   }
 }
@@ -6486,6 +6503,16 @@ footer .footer-main .footer-links__2 .links {
 }
 .services-content-wrapper .development-process-wrapper__steps .step:hover {
   background-color: #0033FF;
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(2):before {
+    left: 50% !important;
+  }
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(3):before {
+    left: calc(100% - 1px) !important;
+  }
 }
 .services-content-wrapper .development-process-wrapper__steps .step:nth-last-child(2):after {
   content: "";
@@ -7394,6 +7421,11 @@ footer .footer-main .footer-links__2 .links {
     margin: 100px auto 50px;
   }
 }
+@media (max-width: 767px) {
+  .services-content-wrapper .benefits-wrapper {
+    margin: 50px auto;
+  }
+}
 .services-content-wrapper .benefits-wrapper h3 {
   margin-bottom: 30px;
 }
@@ -7456,6 +7488,7 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 767px) {
   .services-content-wrapper .benefits-wrapper .d-grid:first-of-type {
     padding: 0 0 40px 0;
+    margin-top: 50px;
   }
 }
 .services-content-wrapper .benefits-wrapper .d-grid:last-child {
@@ -8131,8 +8164,8 @@ textarea::-ms-input-placeholder {
 
 .scroll-top {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 100px;
+  right: 30px;
   background-color: transparent;
   color: #ffffff;
   border: none;
@@ -8149,6 +8182,13 @@ textarea::-ms-input-placeholder {
 }
 .scroll-top:hover {
   background: #0033FF;
+}
+@media (max-width: 767px) {
+  .scroll-top {
+    height: 35px;
+    width: 35px;
+    font-size: 18px;
+  }
 }
 
 .top-gap {
